# feature-flagging-service

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/controller/: UserAuth.rs  authentication.rs  mod.rs  response.rs
src/controller/database/: mod.rs
src/controller/database/mongo/: mod.rs  mongo.rs
src/controller/mongo/: mongo.rs
src/model/: flag.rs  mod.rs  product.rs  user.rs
