[package]
name    = "feature-flagging-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv  = "0.15.0"
futures = "0.3.17"
mongodb = "2.0.1"
rocket  = {version = "0.5.0-rc.1", features = ["json", "secrets"]}
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger"] }
tokio   = { version = "1.12.0", features = ["full"] }

[dependencies.serde]
version  = "1.0"
features = ["derive"]
